--- a/examples/getting-started/skaffold.yaml
+++ b/examples/getting-started/skaffold.yaml
@@ -1,6 +1,8 @@
 apiVersion: skaffold/v1beta2
 kind: Config
 build:
+  plugin:
+    name: cloudbuild
   artifacts:
   - image: gcr.io/k8s-skaffold/skaffold-example
 deploy:
