--- a/examples/getting-started/skaffold.yaml
+++ b/examples/getting-started/skaffold.yaml
@@ -1,14 +1,19 @@
 apiVersion: skaffold/v1beta2
 kind: Config
 build:
-  plugin:
-    name: cloudbuild
-    flags:
-    - name: projectID
-      value: priya-wadhwa
   artifacts:
   - image: gcr.io/k8s-skaffold/skaffold-example
+  plugin:
+    name: docker
+    # flags: -- 
+executionEnvironment:
+  plugin:
+    name: local
+    # flags:
+    # - name: projectID
+    #   value: priya-wadhwa
 deploy:
   kubectl:
     manifests:
       - k8s-*
+ 
