Bazel builder plugin is working locally

--- a/examples/bazel/skaffold.yaml
+++ b/examples/bazel/skaffold.yaml
@@ -4,5 +4,15 @@ build:
   artifacts:
   - image: gcr.io/k8s-skaffold/skaffold-bazel
     context: .
-    bazel:
-      target: //:skaffold_example.tar
+    plugin: 
+      name: bazel-skaffold
+      properties:
+        target: //:skaffold_example.tar
+executionEnvironment:
+  name: local
+  # properties:
+  #   projectID: priyawadhwa
+deploy:
+  kubectl:
+    manifests:
+      - k8s/k8s-*
