--- a/integration/examples/hot-reload/node/k8s/pod.yaml
+++ b/integration/examples/hot-reload/node/k8s/pod.yaml
@@ -1,10 +1,48 @@
+# apiVersion: v1
+# kind: Pod
+# metadata:
+#   name: node
+# spec:
+#   containers:
+#   - name: node
+#     image: gcr.io/k8s-skaffold/node-example
+#     ports:
+#     - containerPort: 3000
+
 apiVersion: v1
-kind: Pod
+kind: Service
 metadata:
-  name: node
+  name: node-example
+  labels:
+    app: node-example
 spec:
-  containers:
-  - name: node
-    image: gcr.io/k8s-skaffold/node-example
-    ports:
-    - containerPort: 3000
+  type: NodePort
+  ports:
+    - port: 3000
+      targetPort: 3000
+      protocol: TCP
+      name: node-example
+  selector:
+    app: node-example
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: node-example
+  labels:
+    app: node-example
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: node-example
+  template:
+    metadata:
+      labels:
+        app: node-example
+    spec:
+      containers:
+        - name: node-example
+          image: gcr.io/k8s-skaffold/node-example
+          ports:
+            - containerPort: 3000
