--- a/integration/examples/jib/skaffold.yaml
+++ b/integration/examples/jib/skaffold.yaml
@@ -3,7 +3,12 @@ kind: Config
 build:
   artifacts:
   - image: gcr.io/k8s-skaffold/skaffold-jib
-    jibMaven: {}
+    # jibMaven: {}
+    custom:
+      buildCommand: ./build.sh
+      dependencies:
+        paths:
+        - .
 
 # optional profile to run the jib build on Google Cloud Build
 profiles:
