--- a/integration/examples/microservices/docker-compose.yaml
+++ b/integration/examples/microservices/docker-compose.yaml
@@ -3,10 +3,10 @@ services:
   leeroyWeb:
     build: ./leeroy-web/
     image: "gcr.io/k8s-skaffold/leeroy-web"
-    ports:
-     - 8080:9000
+    # ports:
+    #  - 8080:9000
   leeroyApp:
     build: ./leeroy-app/
     image: "gcr.io/k8s-skaffold/leeroy-app"
-    ports:
-     - 50051:50053
+    # ports:
+    #  - 50051:50053
