--- a/examples/getting-started/Dockerfile
+++ b/examples/getting-started/Dockerfile
@@ -1,7 +1,8 @@
 FROM golang:1.12.6-alpine3.9 as builder
-COPY main.go .
+COPY main.go file ./
 RUN go build -o /app main.go
 
 FROM alpine:3.9
 CMD ["./app"]
+COPY file .
 COPY --from=builder /app .
